2005-11-03  zzz     * Added a new error page to the eepproxy to differentiate the full 60       second timeout from the immediate "I don't know this base64" failure.
Monotone-Parent: 19b2157bef565a2479ad1ea76e030b81e4bfde7d
Monotone-Revision: 6187bc00a44b01db95ea4a6205b38984ae412c3a

Monotone-Author: jrandom
Monotone-Date: 2005-11-04T01:20:17
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -299,6 +299,7 @@
         <copy file="installer/resources/dnf-header.ht" todir="pkg-temp/docs/" />
         <copy file="installer/resources/dnfp-header.ht" todir="pkg-temp/docs/" />
         <copy file="installer/resources/dnfb-header.ht" todir="pkg-temp/docs/" />
+        <copy file="installer/resources/dnfh-header.ht" todir="pkg-temp/docs/" />
 	<copy file="installer/resources/ahelper-conflict-header.ht" todir="pkg-temp/docs/" />
         <mkdir dir="pkg-temp/eepsite" />
         <mkdir dir="pkg-temp/eepsite/webapps" />
@@ -373,6 +374,7 @@
         <copy file="installer/resources/dnf-header.ht" todir="pkg-temp/docs/" />
         <copy file="installer/resources/dnfp-header.ht" todir="pkg-temp/docs/" />
         <copy file="installer/resources/dnfb-header.ht" todir="pkg-temp/docs/" />
+        <copy file="installer/resources/dnfh-header.ht" todir="pkg-temp/docs/" />
 	<copy file="installer/resources/ahelper-conflict-header.ht" todir="pkg-temp/docs/" />
         <!-- the addressbook handles this for updates -->
         <!-- <copy file="hosts.txt" todir="pkg-temp/" /> -->
