2005-11-10  jrandom     * First pass to a new threaded Syndie interface, which isn't enabled by       default, as its not done yet.
Monotone-Parent: 98688691e5df0fd1c2ad3e1d81fcfc272c6ff45b
Monotone-Revision: 670c34eac1f376eb1d8d853f32bca2aa1fba0933

Monotone-Author: jrandom
Monotone-Date: 2005-11-11T03:41:16
Monotone-Branch: i2p.i2p

--- a/apps/syndie/jsp/web.xml
+++ b/apps/syndie/jsp/web.xml
@@ -15,17 +15,24 @@
     </servlet>
      
     <servlet>
+     <servlet-name>net.i2p.syndie.web.ViewThreadedServlet</servlet-name>
+     <servlet-class>net.i2p.syndie.web.ViewThreadedServlet</servlet-class>
+    </servlet>
+     
+    <servlet>
 	 <servlet-name>net.i2p.syndie.UpdaterServlet</servlet-name>
 	 <servlet-class>net.i2p.syndie.UpdaterServlet</servlet-class>
-     <load-on-startup>1</load-on-startup>
-	</servlet>
+         <load-on-startup>1</load-on-startup>
+    </servlet>
      
     <!-- precompiled servlets -->
     
+    <!--
     <servlet-mapping> 
       <servlet-name>net.i2p.syndie.jsp.index_jsp</servlet-name>
       <url-pattern>/</url-pattern>
     </servlet-mapping>
+    -->
     <servlet-mapping> 
       <servlet-name>net.i2p.syndie.web.ArchiveServlet</servlet-name>
       <url-pattern>/archive/*</url-pattern>
@@ -33,6 +40,10 @@
     <servlet-mapping> 
       <servlet-name>net.i2p.syndie.web.RSSServlet</servlet-name>
       <url-pattern>/rss.jsp</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping> 
+      <servlet-name>net.i2p.syndie.web.ViewThreadedServlet</servlet-name>
+      <url-pattern>/threads.jsp</url-pattern>
     </servlet-mapping>
     
     <session-config>
