2005-11-11  jrandom     * Add filtering threads by author to Syndie, populated with authors in the       user's addressbook     * When creating the default user, add       "http://syndiemedia.i2p/archive/archive.txt" to their addressbook,       configured to automatically pull updates.  (what other archives should       be included?)     * Tiny servlet to help dole out the new routerconsole themes, and bundle       the installer/resources/themes/** into ./docs/themes/** on both install       and update.
Monotone-Parent: bd1e42dc56f11ab642fbda949ff52bdb8d9303b4
Monotone-Revision: b9dadca25a99c01e19d2173bce9c9f1102ef23f3

Monotone-Author: jrandom
Monotone-Date: 2005-11-12T05:03:51
Monotone-Branch: i2p.i2p

--- a/apps/routerconsole/jsp/web.xml
+++ b/apps/routerconsole/jsp/web.xml
@@ -5,6 +5,13 @@
 
 <web-app>
     <!-- precompiled servlets -->
+    
+    <!-- yeah, i'm lazy, using a jsp instead of a servlet.. -->
+    <servlet-mapping> 
+      <servlet-name>net.i2p.router.web.jsp.viewtheme_jsp</servlet-name>
+      <url-pattern>/themes/*</url-pattern>
+    </servlet-mapping>
+    
     <session-config>
         <session-timeout>
             30
