migrate the profile page to the new format, and refactor the new format's servlets
Monotone-Parent: 58a89d941dae50d0782aa3885bd6febf0ae785a6
Monotone-Revision: b625e188bb2dc5f6a9a7f6b2478c638e38cb3776

Monotone-Author: jrandom
Monotone-Date: 2005-11-12T12:14:23
Monotone-Branch: i2p.i2p

--- a/apps/syndie/jsp/web.xml
+++ b/apps/syndie/jsp/web.xml
@@ -18,6 +18,11 @@
      <servlet-name>net.i2p.syndie.web.ViewThreadedServlet</servlet-name>
      <servlet-class>net.i2p.syndie.web.ViewThreadedServlet</servlet-class>
     </servlet>
+    
+    <servlet>
+     <servlet-name>net.i2p.syndie.web.ProfileServlet</servlet-name>
+     <servlet-class>net.i2p.syndie.web.ProfileServlet</servlet-class>
+    </servlet>
      
     <servlet>
 	 <servlet-name>net.i2p.syndie.UpdaterServlet</servlet-name>
@@ -44,6 +49,10 @@
     <servlet-mapping> 
       <servlet-name>net.i2p.syndie.web.ViewThreadedServlet</servlet-name>
       <url-pattern>/threads.jsp</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping> 
+      <servlet-name>net.i2p.syndie.web.ProfileServlet</servlet-name>
+      <url-pattern>/profile.jsp</url-pattern>
     </servlet-mapping>
     
     <session-config>
