migrated the syndie addressbook
Monotone-Parent: 3e9462806e3bbcc5beea640daf8dd13478dcd562
Monotone-Revision: 7313d1e6b0cf22754c6cedcb9bf986969832ae63

Monotone-Author: jrandom
Monotone-Date: 2005-11-13T03:42:52
Monotone-Branch: i2p.i2p

--- a/apps/syndie/jsp/web.xml
+++ b/apps/syndie/jsp/web.xml
@@ -25,6 +25,16 @@
     </servlet>
      
     <servlet>
+     <servlet-name>net.i2p.syndie.web.SwitchServlet</servlet-name>
+     <servlet-class>net.i2p.syndie.web.SwitchServlet</servlet-class>
+    </servlet>
+     
+    <servlet>
+     <servlet-name>net.i2p.syndie.web.AddressesServlet</servlet-name>
+     <servlet-class>net.i2p.syndie.web.AddressesServlet</servlet-class>
+    </servlet>
+     
+    <servlet>
 	 <servlet-name>net.i2p.syndie.UpdaterServlet</servlet-name>
 	 <servlet-class>net.i2p.syndie.UpdaterServlet</servlet-class>
          <load-on-startup>1</load-on-startup>
@@ -53,6 +63,14 @@
     <servlet-mapping> 
       <servlet-name>net.i2p.syndie.web.ProfileServlet</servlet-name>
       <url-pattern>/profile.jsp</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping> 
+      <servlet-name>net.i2p.syndie.web.SwitchServlet</servlet-name>
+      <url-pattern>/switchuser.jsp</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping> 
+      <servlet-name>net.i2p.syndie.web.AddressesServlet</servlet-name>
+      <url-pattern>/addresses.jsp</url-pattern>
     </servlet-mapping>
     
     <session-config>
