* migrate the post/preview over to the new system * honor the "force new thread" and "refuse replies (from everyone but me)" functionality
Monotone-Parent: 72464505810c35cd3075c8f1a6b7a4d342f6d7be
Monotone-Revision: cb94fa43bfd71109377c731f0511cea4eac2a2da

Monotone-Author: jrandom
Monotone-Date: 2005-11-13T07:55:38
Monotone-Branch: i2p.i2p

--- a/apps/syndie/jsp/web.xml
+++ b/apps/syndie/jsp/web.xml
@@ -35,6 +35,11 @@
     </servlet>
      
     <servlet>
+     <servlet-name>net.i2p.syndie.web.PostServlet</servlet-name>
+     <servlet-class>net.i2p.syndie.web.PostServlet</servlet-class>
+    </servlet>
+     
+    <servlet>
 	 <servlet-name>net.i2p.syndie.UpdaterServlet</servlet-name>
 	 <servlet-class>net.i2p.syndie.UpdaterServlet</servlet-class>
          <load-on-startup>1</load-on-startup>
@@ -71,6 +76,10 @@
     <servlet-mapping> 
       <servlet-name>net.i2p.syndie.web.AddressesServlet</servlet-name>
       <url-pattern>/addresses.jsp</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping> 
+      <servlet-name>net.i2p.syndie.web.PostServlet</servlet-name>
+      <url-pattern>/post.jsp</url-pattern>
     </servlet-mapping>
     
     <session-config>
