move the admin page over to the new system
Monotone-Parent: cb94fa43bfd71109377c731f0511cea4eac2a2da
Monotone-Revision: a36b0c9beb4a94a00d8ac6bd73f823c949871600

Monotone-Author: jrandom
Monotone-Date: 2005-11-13T11:04:17
Monotone-Branch: i2p.i2p

--- a/apps/syndie/jsp/web.xml
+++ b/apps/syndie/jsp/web.xml
@@ -40,6 +40,11 @@
     </servlet>
      
     <servlet>
+     <servlet-name>net.i2p.syndie.web.AdminServlet</servlet-name>
+     <servlet-class>net.i2p.syndie.web.AdminServlet</servlet-class>
+    </servlet>
+     
+    <servlet>
 	 <servlet-name>net.i2p.syndie.UpdaterServlet</servlet-name>
 	 <servlet-class>net.i2p.syndie.UpdaterServlet</servlet-class>
          <load-on-startup>1</load-on-startup>
@@ -80,6 +85,10 @@
     <servlet-mapping> 
       <servlet-name>net.i2p.syndie.web.PostServlet</servlet-name>
       <url-pattern>/post.jsp</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping> 
+      <servlet-name>net.i2p.syndie.web.AdminServlet</servlet-name>
+      <url-pattern>/admin.jsp</url-pattern>
     </servlet-mapping>
     
     <session-config>
