migrate to the new system
Monotone-Parent: ba9a66a86d624b78608e793b31b48a1fa0ee4aaf
Monotone-Revision: 1822d2fc18d05db48e9f8077ee82abbb385555c6

Monotone-Author: jrandom
Monotone-Date: 2005-11-14T02:09:23
Monotone-Branch: i2p.i2p

--- a/apps/syndie/jsp/web.xml
+++ b/apps/syndie/jsp/web.xml
@@ -45,6 +45,11 @@
     </servlet>
      
     <servlet>
+     <servlet-name>net.i2p.syndie.web.SyndicateServlet</servlet-name>
+     <servlet-class>net.i2p.syndie.web.SyndicateServlet</servlet-class>
+    </servlet>
+     
+    <servlet>
 	 <servlet-name>net.i2p.syndie.UpdaterServlet</servlet-name>
 	 <servlet-class>net.i2p.syndie.UpdaterServlet</servlet-class>
          <load-on-startup>1</load-on-startup>
@@ -89,6 +94,10 @@
     <servlet-mapping> 
       <servlet-name>net.i2p.syndie.web.AdminServlet</servlet-name>
       <url-pattern>/admin.jsp</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping> 
+      <servlet-name>net.i2p.syndie.web.SyndicateServlet</servlet-name>
+      <url-pattern>/syndicate.jsp</url-pattern>
     </servlet-mapping>
     
     <session-config>
