* move over the rssimport, and default it to the proxy @ localhost:4444
Monotone-Parent: 1822d2fc18d05db48e9f8077ee82abbb385555c6
Monotone-Revision: 4bcde74669d8f277b3bb74246f991526536d7e89

Monotone-Author: jrandom
Monotone-Date: 2005-11-14T05:40:18
Monotone-Branch: i2p.i2p

--- a/apps/syndie/jsp/web.xml
+++ b/apps/syndie/jsp/web.xml
@@ -50,6 +50,11 @@
     </servlet>
      
     <servlet>
+     <servlet-name>net.i2p.syndie.web.ImportFeedServlet</servlet-name>
+     <servlet-class>net.i2p.syndie.web.ImportFeedServlet</servlet-class>
+    </servlet>
+     
+    <servlet>
 	 <servlet-name>net.i2p.syndie.UpdaterServlet</servlet-name>
 	 <servlet-class>net.i2p.syndie.UpdaterServlet</servlet-class>
          <load-on-startup>1</load-on-startup>
@@ -98,6 +103,10 @@
     <servlet-mapping> 
       <servlet-name>net.i2p.syndie.web.SyndicateServlet</servlet-name>
       <url-pattern>/syndicate.jsp</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping> 
+      <servlet-name>net.i2p.syndie.web.ImportFeedServlet</servlet-name>
+      <url-pattern>/importfeed.jsp</url-pattern>
     </servlet-mapping>
     
     <session-config>
