--- a/apps/syndie/jsp/web.xml
+++ b/apps/syndie/jsp/web.xml
@@ -55,6 +55,11 @@
     </servlet>
      
     <servlet>
+     <servlet-name>net.i2p.syndie.web.ExternalLinkServlet</servlet-name>
+     <servlet-class>net.i2p.syndie.web.ExternalLinkServlet</servlet-class>
+    </servlet>
+     
+    <servlet>
 	 <servlet-name>net.i2p.syndie.UpdaterServlet</servlet-name>
 	 <servlet-class>net.i2p.syndie.UpdaterServlet</servlet-class>
          <load-on-startup>1</load-on-startup>
@@ -107,6 +112,10 @@
     <servlet-mapping> 
       <servlet-name>net.i2p.syndie.web.ImportFeedServlet</servlet-name>
       <url-pattern>/importfeed.jsp</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping> 
+      <servlet-name>net.i2p.syndie.web.ExternalLinkServlet</servlet-name>
+      <url-pattern>/externallink.jsp</url-pattern>
     </servlet-mapping>
     
     <session-config>
