put rome and jdom in the syndie.war, and fix some deprecation warnings
Monotone-Parent: c4db2e80717ae88892bbe493a98f9878d28e8cd2
Monotone-Revision: 8e24cf97ce287611aa0661a41767611ff0f18bce

Monotone-Author: jrandom
Monotone-Date: 2005-11-15T12:46:54
Monotone-Branch: i2p.i2p

--- a/apps/syndie/java/build.xml
+++ b/apps/syndie/java/build.xml
@@ -32,10 +32,16 @@
         <ant target="war" />
     </target>
     <target name="war" depends="builddep, compile, precompilejsp"> 
+        <mkdir dir="./tmpwar" />
+        <copy file="../../jdom/jdom.jar" tofile="./tmpwar/jdom.jar" />
+        <copy file="../../rome/rome-0.7.jar" tofile="./tmpwar/rome-0.7.jar" />
+
         <war destfile="../syndie.war" webxml="../jsp/web-out.xml">
           <fileset dir="../jsp/" includes="**/*" excludes=".nbintdb, web.xml, web-out.xml, web-fragment.xml, **/*.java, **/*.jsp" />
           <classes dir="./build/obj" />
+          <lib dir="./tmpwar" />
         </war>
+	<delete dir="./tmpwar" />
     </target>
     <target name="precompilejsp">
         <delete dir="../jsp/WEB-INF/" />
