2005-11-26  jrandom     * Update the sorting in Syndie to consider children 'newer' than parents,       even if they have the same message ID (duh)     * Cleaned up some nav links in Syndie (good idea gloin, spaetz!)     * Added a bunch of tooltips to Syndie's fields (thanks polecat!)     * Force support for nonvalidating XML in Jetty (so we can handle GCJ/etc       better)
Monotone-Parent: 4f667cbfb60fa28151cc88a1e814a37cccbe38b2
Monotone-Revision: 93e6d1e253e15c3c70f9df70d0740eba65d3e671

Monotone-Author: jrandom
Monotone-Date: 2005-11-26T16:51:16
Monotone-Branch: i2p.i2p

--- a/installer/resources/wrapper.config
+++ b/installer/resources/wrapper.config
@@ -51,6 +51,7 @@ wrapper.java.library.path.2=lib
 wrapper.java.additional.1=-DloggerFilenameOverride=logs/log-router-@.txt
 wrapper.java.additional.2=-Dorg.mortbay.http.Version.paranoid=true
 wrapper.java.additional.3=-Dorg.mortbay.util.FileResource.checkAliases=false
+wrapper.java.additional.4=-Dorg.mortbay.xml.XmlParser.NotValidating=true
 
 # Initial Java Heap Size (in MB)
 #wrapper.java.initmemory=4
