2005-11-30  jrandom     * Cleaned up the build process to deal with Jetty 5.1.6 and rename the       new commons-logging-api.jar to commons-logging.jar, which it replaces.       Jetty 5.1.6 is pushed with all updates.  Also, no need to push a       separate jdom or rome, as they're inside syndie.war.
Monotone-Parent: 66286db549001f12fe26b0cc5c322503d3172d2b
Monotone-Revision: 68499dee78adcaf17fcbd5e611d77191fccdc12e

Monotone-Author: jrandom
Monotone-Date: 2005-12-01T01:13:44
Monotone-Branch: i2p.i2p

--- a/apps/jetty/build.xml
+++ b/apps/jetty/build.xml
@@ -26,7 +26,6 @@
             <fileset dir="jetty-5.1.6/ext">
                 <include name="ant.jar" />
                 <include name="commons-el.jar" />
-                <include name="commons-logging.jar" />
                 <include name="jasper-compiler.jar" />
                 <include name="jasper-runtime.jar" />
                 <include name="javax.servlet.jar" />
@@ -34,6 +33,8 @@
                 <include name="xercesImpl.jar" />
             </fileset>
         </copy>
+	<!-- note the rename, to keep compat with old rev, since we only used the API anyway -->
+	<copy file="jetty-5.1.6/ext/commons-logging-api.jar" tofile="jettylib/commons-logging.jar" />
         <delete dir="jetty-5.1.6" />
     </target>
     <target name="build" depends="fetchJettylib" />
