2005-12-05  jrandom     * Added an RDF and XML thread export to Syndie, reachable at       .../threadnav/rdf or .../threadnav/xml, accepting the parameters       count=$numThreads and offset=$threadIndex.  If the $numThreads is -1, it       displays all threads.
Monotone-Parent: 355c2d2178d0fcf3c6e831fe975c8c2c4d5602f2
Monotone-Revision: 2e07981a8a1d3d0880f4cd50b81efd5d51f48352

Monotone-Author: jrandom
Monotone-Date: 2005-12-05T06:14:15
Monotone-Branch: i2p.i2p

--- a/apps/syndie/jsp/web.xml
+++ b/apps/syndie/jsp/web.xml
@@ -60,6 +60,11 @@
     </servlet>
      
     <servlet>
+     <servlet-name>net.i2p.syndie.web.ThreadNavServlet</servlet-name>
+     <servlet-class>net.i2p.syndie.web.ThreadNavServlet</servlet-class>
+    </servlet>
+     
+    <servlet>
 	 <servlet-name>net.i2p.syndie.UpdaterServlet</servlet-name>
 	 <servlet-class>net.i2p.syndie.UpdaterServlet</servlet-class>
          <load-on-startup>1</load-on-startup>
@@ -116,6 +121,10 @@
     <servlet-mapping> 
       <servlet-name>net.i2p.syndie.web.ExternalLinkServlet</servlet-name>
       <url-pattern>/externallink.jsp</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping> 
+      <servlet-name>net.i2p.syndie.web.ThreadNavServlet</servlet-name>
+      <url-pattern>/threadnav/*</url-pattern>
     </servlet-mapping>
     
     <session-config>
