2005-12-07  jrandom     * Added a first pass at a blog view in Syndie
Monotone-Parent: 93d0860ecd1800a011b53aea8f34681126d45b5b
Monotone-Revision: 65b629e7c3cd3e0147ce2cd64e1b5db0281170b8

Monotone-Author: jrandom
Monotone-Date: 2005-12-08T00:50:32
Monotone-Branch: i2p.i2p

--- a/apps/syndie/jsp/web.xml
+++ b/apps/syndie/jsp/web.xml
@@ -65,6 +65,11 @@
     </servlet>
      
     <servlet>
+     <servlet-name>net.i2p.syndie.web.ViewBlogsServlet</servlet-name>
+     <servlet-class>net.i2p.syndie.web.ViewBlogsServlet</servlet-class>
+    </servlet>
+     
+    <servlet>
 	 <servlet-name>net.i2p.syndie.UpdaterServlet</servlet-name>
 	 <servlet-class>net.i2p.syndie.UpdaterServlet</servlet-class>
          <load-on-startup>1</load-on-startup>
@@ -125,6 +130,10 @@
     <servlet-mapping> 
       <servlet-name>net.i2p.syndie.web.ThreadNavServlet</servlet-name>
       <url-pattern>/threadnav/*</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping> 
+      <servlet-name>net.i2p.syndie.web.ViewBlogsServlet</servlet-name>
+      <url-pattern>/blogs.jsp</url-pattern>
     </servlet-mapping>
     
     <session-config>
