Navbar is now customizeable via docs/toolbar.html.  There is a default should that file not be there.  And... wtf, didn't my syndie thumbnail patch take? Well, no conflicts reported so, here it goes again.
Monotone-Parent: 56031a55b74eae45b7def88baab96a876d834a82
Monotone-Revision: d5ddd159ba40159089e1729d0abd09ce7d0be3e1

Monotone-Author: polecat
Monotone-Date: 2005-12-13T08:18:59
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -291,6 +291,7 @@
         <copy file="core/perl/i2ptest.sh" todir="pkg-temp/scripts/" />
         <mkdir dir="pkg-temp/docs" />
         <copy file="readme.html" todir="pkg-temp/docs/" />
+        <copy file="toolbar.html" todir="pkg-temp/docs/" />
         <copy file="initialNews.xml" tofile="pkg-temp/docs/news.xml" />
         <copy file="installer/resources/startconsole.html" todir="pkg-temp/docs/" />
         <copy file="installer/resources/start.ico" todir="pkg-temp/docs/" />
