toolbar.html isn't in cvs yet (polecat - please check this diff :)
Monotone-Parent: f763cc535dbd37152457dc3692398c500a7acde6
Monotone-Revision: d8ec67506fd5ccd0d09db714d901d374c9730478

Monotone-Author: jrandom
Monotone-Date: 2005-12-13T09:43:41
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -291,7 +291,9 @@
         <copy file="core/perl/i2ptest.sh" todir="pkg-temp/scripts/" />
         <mkdir dir="pkg-temp/docs" />
         <copy file="readme.html" todir="pkg-temp/docs/" />
-        <copy file="toolbar.html" todir="pkg-temp/docs/" />
+        <!-- polecat: please put your modified toolbar.html in installer/resources/toolbar.html 
+             and uncomment the following -->
+        <!-- <copy file="installer/resources/toolbar.html" todir="pkg-temp/docs/" /> -->
         <copy file="initialNews.xml" tofile="pkg-temp/docs/news.xml" />
         <copy file="installer/resources/startconsole.html" todir="pkg-temp/docs/" />
         <copy file="installer/resources/start.ico" todir="pkg-temp/docs/" />
@@ -365,6 +367,10 @@
         <copy file="installer/resources/dnfb-header.ht" todir="pkg-temp/docs/" />
         <copy file="installer/resources/dnfh-header.ht" todir="pkg-temp/docs/" />
 	<copy file="installer/resources/ahelper-conflict-header.ht" todir="pkg-temp/docs/" />
+        
+        <!-- polecat: please put your modified toolbar.html in installer/resources/toolbar.html 
+             and uncomment the following -->
+        <!-- <copy file="installer/resources/toolbar.html" todir="pkg-temp/docs/" /> -->
         
         <mkdir dir="pkg-temp/docs/themes/" />
         <copy todir="pkg-temp/docs/themes/" >
